Get messages and single message
