# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\MessageController;
 
 /*
 |--------------------------------------------------------------------------
@@ -15,6 +16,13 @@ use App\Http\Controllers\AuthController;
 |
 */
 
+// Public Routes
 Route::middleware('throttle:1000,1')->group(function () {
     Route::post('login', [AuthController::class, 'login']);
+});
+
+// Protected Routes
+Route::middleware(['auth:sanctum', 'throttle:60,1'])->group(function () {
+    Route::get('messages', [MessageController::class, 'index']);
+    Route::get('messages/{message}', [MessageController::class, 'show']);
 });
